--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="textBox">
                 <h2>Dê um  <span>UP</span> na sua saúde mental. </h2>
                 <p>Os melhores profissionais do mercado se encontram aqui, faça sua consulta de teste hoje mesmo!</p>
-                <br><br><a href="#">Acesse o App</a>
+                <br><br><a href="https://ftalkapi.tech" target="_blank">Acesse o App</a>
             </div>
         </div>
        
