Mudando pasta para ver se funciona

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="assets/img/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
     <title>PsicoHelp - Psicólogos Online</title>
     <link rel="stylesheet" href="style.css">
     <!-- Compiled and minified CSS -->
@@ -15,19 +15,19 @@
 <body>
     <section>
         <header>
-            <a href="#"><img src="assets/img/logo.png" class="logo"></a> 
+            <a href="#"><img src="assets/logo.png" class="logo"></a> 
             <h2>PsicoHelp</h2>
         </header>
         
         <div class="carrousel">
             <div class="carousel">
-                <a class="carousel-item"><img src="assets/img/7.png"></a>
-                <a class="carousel-item"><img src="assets/img/1.png"></a>
-                <a class="carousel-item"><img src="assets/img/2.png"></a>
-                <a class="carousel-item"><img src="assets/img/3.png"></a>
-                <a class="carousel-item"><img src="assets/img/4.png"></a>
-                <a class="carousel-item"><img src="assets/img/5.png"></a>
-                <a class="carousel-item"><img src="assets/img/6.png"></a>
+                <a class="carousel-item"><img src="assets/7.png"></a>
+                <a class="carousel-item"><img src="assets/1.png"></a>
+                <a class="carousel-item"><img src="assets/2.png"></a>
+                <a class="carousel-item"><img src="assets/3.png"></a>
+                <a class="carousel-item"><img src="assets/4.png"></a>
+                <a class="carousel-item"><img src="assets/5.png"></a>
+                <a class="carousel-item"><img src="assets/6.png"></a>
               </div>
         </div>
         <div class="apresentation">            
